src/test/ui/parser/bound-single-question-mark.stderr
error: expected identifier, found `>`
  --> $DIR/bound-single-question-mark.rs:3:10
   |
LL | fn f<T: ?>() {} //~ ERROR expected identifier, found `>`
   |          ^ expected identifier

error: aborting due to previous error

